{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 488,
  "lineage": "b21e2f21-a87a-0fd8-2053-fbed971d9f79",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AppBox",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce71448843cb18a1",
            "arn": "arn:aws:ec2:eu-west-1:735287868690:instance/i-06360498ea7b5638a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-06360498ea7b5638a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins_key4",
            "monitoring": false,
            "primary_network_interface_id": "eni-054b3393eb8d9a4a0",
            "private_dns": "ip-10-0-0-96.eu-west-1.compute.internal",
            "private_ip": "10.0.0.96",
            "public_dns": "ec2-52-208-152-171.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.208.152.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02dc5e1c6f35c4713",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04a5a8ec033cc542e",
            "tags": {
              "Name": "AppBox"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01e4c731204d08ef7"
            ]
          },
          "depends_on": [
            "aws_security_group.app_allow",
            "aws_subnet.public",
            "data.template_file.app_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "JenkinsBox",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce71448843cb18a1",
            "arn": "arn:aws:ec2:eu-west-1:735287868690:instance/i-0fbd07832b716f0b5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0fbd07832b716f0b5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins_key4",
            "monitoring": false,
            "primary_network_interface_id": "eni-0926e8198bdc32292",
            "private_dns": "ip-10-0-0-220.eu-west-1.compute.internal",
            "private_ip": "10.0.0.220",
            "public_dns": "ec2-34-241-5-40.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.241.5.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0774f6568122b2c8f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04a5a8ec033cc542e",
            "tags": {
              "Name": "JenkinsBox"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02e66b3dc0f098e43"
            ]
          },
          "depends_on": [
            "aws_security_group.jenkins_allow",
            "aws_subnet.public",
            "data.template_file.jenkins_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webBox",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce71448843cb18a1",
            "arn": "arn:aws:ec2:eu-west-1:735287868690:instance/i-033cf563bec014fbe",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-033cf563bec014fbe",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins_key4",
            "monitoring": false,
            "primary_network_interface_id": "eni-002362d5072b3476a",
            "private_dns": "ip-10-0-0-141.eu-west-1.compute.internal",
            "private_ip": "10.0.0.141",
            "public_dns": "ec2-52-214-253-155.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.214.253.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06d1e75c532356bed",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04a5a8ec033cc542e",
            "tags": {
              "Name": "webBox"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f0dd133499be89c7"
            ]
          },
          "depends_on": [
            "aws_security_group.web_allow",
            "aws_subnet.public",
            "data.template_file.web_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0efdcb5144b64f5ac",
            "owner_id": "735287868690",
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "main_-dev-ig"
            },
            "vpc_id": "vpc-057b5a94694dae5cb"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05b6dd5e67256fe24",
            "owner_id": "735287868690",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0efdcb5144b64f5ac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "JenkinsSetup-dev-public-routes"
            },
            "vpc_id": "vpc-057b5a94694dae5cb"
          },
          "depends_on": [
            "aws_internet_gateway.ig",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03ae6971a8f8e0eae",
            "owner_id": "735287868690",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0efdcb5144b64f5ac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "JenkinsSetup-dev-public-routes"
            },
            "vpc_id": "vpc-057b5a94694dae5cb"
          },
          "depends_on": [
            "aws_internet_gateway.ig",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0224c6bd1f74cb64f",
            "route_table_id": "rtb-05b6dd5e67256fe24",
            "subnet_id": "subnet-04a5a8ec033cc542e"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d9393f57f7f68c6",
            "route_table_id": "rtb-03ae6971a8f8e0eae",
            "subnet_id": "subnet-0e4e43206dd14e404"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_allow",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:735287868690:security-group/sg-01e4c731204d08ef7",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e4c731204d08ef7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_app",
            "name_prefix": null,
            "owner_id": "735287868690",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AppBox SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-057b5a94694dae5cb"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_allow",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:735287868690:security-group/sg-02e66b3dc0f098e43",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e66b3dc0f098e43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_all",
            "name_prefix": null,
            "owner_id": "735287868690",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "JenkinsBox SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-057b5a94694dae5cb"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_allow",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:735287868690:security-group/sg-0f0dd133499be89c7",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0dd133499be89c7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_web",
            "name_prefix": null,
            "owner_id": "735287868690",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webBox SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-057b5a94694dae5cb"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:735287868690:subnet/subnet-04a5a8ec033cc542e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-04a5a8ec033cc542e",
            "map_public_ip_on_launch": false,
            "owner_id": "735287868690",
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "JenkinsSetup-dev-public-subnet-0"
            },
            "vpc_id": "vpc-057b5a94694dae5cb"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:735287868690:subnet/subnet-0e4e43206dd14e404",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e4e43206dd14e404",
            "map_public_ip_on_launch": false,
            "owner_id": "735287868690",
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "JenkinsSetup-dev-public-subnet-1"
            },
            "vpc_id": "vpc-057b5a94694dae5cb"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:735287868690:vpc/vpc-057b5a94694dae5cb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e5643a8625c364e5",
            "default_route_table_id": "rtb-065bf36c836ead57f",
            "default_security_group_id": "sg-0c37a99a372c96c02",
            "dhcp_options_id": "dopt-00a3c250603d037cc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-057b5a94694dae5cb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-065bf36c836ead57f",
            "owner_id": "735287868690",
            "tags": {
              "environment": "dev",
              "managed_by": "terraform",
              "name": "main_dev-vpc"
            }
          }
        }
      ]
    }
  ]
}